# frozenclass

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  pyproject.toml  setup.py  start_testing.py
.github/workflows/: codeql.yml  linting.yml  main.yml  tests.yml  windows_tests.yml
docs/: conf.py  index.rst  overview.rst
docs/_extensions/: autodoc_stub_file.py
frozenclass/: README.md  __init__.py  auto_freeze.py  cache.py  data_controller.py  data_reader.py
frozenclass/dataparser/: __init__.py  const.py  data_parser.py  data_writer.py  types_modul.py  types_module.py
frozenclass/exceptions/: __init__.py  no_save.py  no_var.py
frozenclass/functions/: __init__.py  parse_name.py
frozenclass/tests/: __init__.py  funcs.py  load_test.py
pysavedata/: __init__.py  data_controller.py
pysavedata/dataparser/: __init__.py  data_parser.py  data_writer.py  types_modul.py
pysavedata/exceptions/: __init__.py
pysavedata/functions/: __init__.py  parse_name.py
pysavedata/tests/: __init__.py  funcs.py  load_test.py
scripts/: autoclean.py  build.py  public.py  pylint.py  testing.py
src/: __init__.py  data_controller.py  data_reader.py  data_saver.py
src/dataparser/: data_parser.py
src/models/: README.md  __init__.py  saved_model.py
tests/: __init__.py  test_1.py  test_async_cache.py  test_autosave.py  test_cache.py  test_deep_save_load.py  test_save.py  test_save_bases.py  test_save_load.py
