[tool.poetry]
name = "pysavedata"
version = "0.0.1"
description = "Python module for convenient storage of classes in files."
authors = ["GigantPro <gigantpro2000@gmail.com>"]
license = "The GPLv3 License (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^67.6.1"
twine = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts.build:build"
public = "scripts.public:public"