[tool.poetry]
name = "frozenclass"
version = "0.0.3a1"
description = "Python module for convenient storage of classes in files."
authors = ["GigantPro <gigantpro2000@gmail.com>"]
license = "The GPLv3 License (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^67.6.1"
twine = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts.build:build"
public = "scripts.public:public"
linting = "scripts.pylint:start_linting"
testing = "frozenclass.tests.__init__:start_testing"

[tool.pylint]
max-line-length = 120
disable = [
    "C0114",
    "C0115",
    "C0116",
    "C0201",
    "R0903",
    "W0511",
    "R0912",
    "E0213",
    "E1102",
    "E1136",
    "E0402",
    "W0622",
    "W0105",
    "C0207",
    "C2801",
    "C0206"
]
