[tool.poetry]
name = "frozenclass"
version = "0.0.8"
description = "Python module for convenient storage of classes in files."
authors = ["GigantPro <gigantpro2000@gmail.com>"]
license = "The GPLv3 License (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.1"
pylint = "^2.17.1"
pytest = "^7.2.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts.build:build"
public = "scripts.public:public"
linting = "scripts.pylint:start_linting"
testing = "scripts.testing:start_testing"
clean = "scripts.autoclean:autoclean"

[tool.pylint]
max-line-length = 120
disable = [
    "C0114",
    "C0115",
    "C0116",
    "C0201",
    "R0903",
    "W0511",
    "R0912",
    "E0213",
    "E1102",
    "E1136",
    "E0402",
    "W0622",
    "W0105",
    "C0207",
    "C2801",
    "C0206",
    "C0200",
    "E0401",
    "W1401"
]
